[fix] column's list overflows if its children length is greater than its height

--- a/src/components/board/components/column/styles.module.css
+++ b/src/components/board/components/column/styles.module.css
@@ -2,6 +2,10 @@
     width: 240px;
 }
 
+.tasksContainer {
+    height: calc(100% - 40px);
+}
+
 @media screen and (min-width: 768px) {
     .container {
         width: 280px;
